fixed overflowing main product picture

--- a/app/assets/stylesheets/products/product_singular.scss
+++ b/app/assets/stylesheets/products/product_singular.scss
@@ -32,8 +32,8 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 661px;
+  max-height: 661px;
   border-radius: 20px;
   box-shadow: 4px 4px 4px 4px #C6D5D8;
 }
